...
    tools:context=".LobbyStatsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lobbyStatsConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/lobbyStatsLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lobby_name_lobby_stats"
...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lobbyStatsConstraintLayout"
        map:layout_constraintBottom_toTopOf="@+id/add_player_button">

    </LinearLayout>

    <Button
        android:id="@+id/add_player_button"
        android:layout_width="wrap_content"
...
